--- a/ScrabbleWeb/Client/wwwroot/css/app.css
+++ b/ScrabbleWeb/Client/wwwroot/css/app.css
@@ -319,3 +319,16 @@ app {
 .clickable {
     cursor: pointer;
 }
+
+.game-card {
+    margin-bottom:1rem;
+    transition: 0.3s;
+}
+
+a.game-link:hover {
+    text-decoration: none;
+}
+
+    a.game-link:hover .game-card {
+        transform: scale(1.04);
+    }
