Improved message box display on main game screen

--- a/ScrabbleWeb/Client/Pages/GameDisplay.razor
+++ b/ScrabbleWeb/Client/Pages/GameDisplay.razor
@@ -15,7 +15,7 @@
 }
 else
 {
-    <GameMessage BootstrapContext="@messageContext" OpponentName="@game.OtherName">
+    <GameMessage BootstrapContext="@messageContext" Game="@game">
         @message
     </GameMessage>
 
