--- a/ScrabbleWeb/Client/wwwroot/css/app.css
+++ b/ScrabbleWeb/Client/wwwroot/css/app.css
@@ -205,6 +205,8 @@ app {
     justify-content:center;
     align-items:center;
     overflow:hidden;
+    cursor: default;
+    user-select: none;
 }
 
 .tile-space .tile-container {
