Show number of tiles remaining

--- a/ScrabbleWeb/Client/Pages/GameDisplay.razor
+++ b/ScrabbleWeb/Client/Pages/GameDisplay.razor
@@ -113,6 +113,10 @@ else
                         }
                     </div>
                 }
+
+                @*Not really part of the board, but including it in the board
+                div means it aligns with the board*@
+                <div class="float-left mt-4">Number of tiles remaining: @game.TilesRemaining</div>
             </div>
         </div>
 
