--- a/ScrabbleWeb/Client/Shared/NavMenu.razor
+++ b/ScrabbleWeb/Client/Shared/NavMenu.razor
@@ -19,6 +19,11 @@
                         <span class="oi oi-grid-two-up" aria-hidden="true"></span> Games
                     </NavLink>
                 </li>
+                <li class="nav-item px-3">
+                    <NavLink class="nav-link" href="stats">
+                        <span class="oi oi-bar-chart" aria-hidden="true"></span> Statistics
+                    </NavLink>
+                </li>
             </Authorized>
         </AuthorizeView>
     </ul>
