--- a/ScrabbleWeb/Client/Pages/GameDisplay.razor
+++ b/ScrabbleWeb/Client/Pages/GameDisplay.razor
@@ -12,6 +12,8 @@
 @inject IModalService Modal
 @inject IMapper mapper
 @inject NavigationManager NavigationManager
+@inject IJSRuntime JSRuntime;
+
 
 @if (game == null)
 {
@@ -23,7 +25,7 @@ else
         @message
     </GameMessage>
 
-    <div class="game">
+    <div class="game" id="game">
         <div class="game-element-container">
             <div class="board">
                 @for (int y = 0; y < GameBase.BOARD_HEIGHT; y++)
@@ -334,7 +336,12 @@ else
 
         tileBeingMoved = null;
         UpdateMessage();
+        // If the contents of the message box have changed, this can result in the board
+        // scrolling off the screen. Here, we ensure that the board stays in the same
+        // position
+        await JSRuntime.InvokeVoidAsync("scrollPreventer.saveTop", "game");
         StateHasChanged();
+        await JSRuntime.InvokeVoidAsync("scrollPreventer.restoreTop", "game");
     }
 
     private void RemoveBlankToRack(ITilePosition position)
