--- a/ScrabbleWeb/Client/Components/GameMessage.razor
+++ b/ScrabbleWeb/Client/Components/GameMessage.razor
@@ -27,9 +27,9 @@
                 break;
         }
 
-        @if (!(Game.Winner == ScrabbleWeb.Shared.WinnerDto.NotFinished && Game.MyMove))
+        @if (Game.Winner != ScrabbleWeb.Shared.WinnerDto.NotFinished || Game.MyMove)
         {
-            // If other player has just played
+            // If other player has just played, or if this game has finished
             <p>@Game.LastMoveDescription</p>
         }
 
