Minor layout changes

--- a/ScrabbleWeb/Client/Pages/GameDisplay.razor
+++ b/ScrabbleWeb/Client/Pages/GameDisplay.razor
@@ -156,7 +156,7 @@ else
                 </div>
             </div>
         </div>
-        <div class="buttons mt-4">
+        <div class="buttons mt-4 mb-2">
             @if (game.Winner == WinnerDto.NotFinished)
             {
                 if (game.Move.Placements.Count() == 0)
