Remove using statements into imports file

--- a/ScrabbleWeb/Client/Components/GameMessage.razor
+++ b/ScrabbleWeb/Client/Components/GameMessage.razor
@@ -1,6 +1,4 @@
-﻿@using ScrabbleWeb.Client.Models
-
-<div class="message">
+﻿<div class="message">
     <h3 class="mb-3">
         Your game with @Game.OtherName
     </h3>
