--- a/ScrabbleWeb/Client/Components/TileSpace.razor
+++ b/ScrabbleWeb/Client/Components/TileSpace.razor
@@ -1,6 +1,4 @@
-﻿@using ScrabbleWeb.Client.ViewModels 
-
-<div class=@TileVm.TileSpaceClass @onclick=Click>
+﻿<div class=@TileVm.TileSpaceClass @onclick=Click>
     <div class=@TileVm.TileContainerClass>
         @if (TileVm.Contents == null)
         {
