--- a/ScrabbleWeb/Client/_Imports.razor
+++ b/ScrabbleWeb/Client/_Imports.razor
@@ -6,8 +6,17 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using ScrabbleWeb.Client
-@using ScrabbleWeb.Client.Shared
+@using Microsoft.AspNetCore.SignalR.Client
+
 @using Blazored
 @using Blazored.Modal
 @using Blazored.Modal.Services
+@using AutoMapper
+
+@using ScrabbleWeb.Client
+@using ScrabbleWeb.Client.Shared
+@using ScrabbleWeb.Client.Components
+@using ScrabbleWeb.Client.Models
+@using ScrabbleWeb.Client.ViewModels
+@using ScrabbleWeb.Shared
+@using ScrabbleMoveChecker
