--- a/ScrabbleWeb/Client/_Imports.razor
+++ b/ScrabbleWeb/Client/_Imports.razor
@@ -19,4 +19,4 @@
 @using ScrabbleWeb.Client.Models
 @using ScrabbleWeb.Client.ViewModels
 @using ScrabbleWeb.Shared
-@using ScrabbleMoveChecker
+@using ScrabbleBase
